manifests-openshift/deploy-acmeair-bookingservice-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-bookingservice
  labels:
    app.kubernetes.io/part-of: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-booking-deployment
  template:
    metadata:
      labels:
        name: acmeair-booking-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-bookingservice-java
        image: docker.io/yigitpolat/acmeair-bookingservice-java:latest
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 100m
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 20
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-booking-service
  labels:
    app.kubernetes.io/part-of: booking-service
spec:
  ports:
    - port: 9080
  selector:
    name: acmeair-booking-deployment
---
##### Booking Database  #####
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: acmeair-booking-db
  labels:
    app.kubernetes.io/part-of: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-booking-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: acmeair-booking-db
    spec:
      volumes:
        - name: acmeair-booking-db-1
          emptyDir: {}
        - name: acmeair-booking-db-2
          emptyDir: {}
      containers:
      - image: mongo 
        name: acmeair-booking-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: acmeair-booking-db-1
            mountPath: /data/configdb
          - name: acmeair-booking-db-2
            mountPath: /data/db
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: acmeair-booking-db
  labels:
    service: acmeair-booking-db
    app.kubernetes.io/part-of: booking-service
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: acmeair-booking-db
status:
  loadBalancer: {}
