manifests-openshift/acmeair-bookingservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-booking-route
  labels:
    app.kubernetes.io/part-of: acmeair-bookingservice
spec:
  host: _HOST_
  path: /booking
  to:
    kind: Service
    name: acmeair-booking-service
  port:
    targetPort: 9080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
